Add Trenissimo entry point and IntelliJ IDEA VM options in README.md